
  * Fixed a potential bug in s3qlrm that would probably lead to a
    filesystem crash (hasn't actually been observed though).

  * Clarified installation instructions: S3QL requires the official
    systemd Python module, not the (third-party) module on PyPi.

  * Fixed occasional crashes with a "dugong.StateError" exception.
    Thanks to Roger Gammans for extensive testing!

2018-10-08, S3QL 2.31

  * Object removal now makes more use of parallelism.

2018-09-02, S3QL 2.30

  * s3qladm has gained a new "recover-key" operation to restore the
    file system passphrase from an offline copy.

  * Error messages in a few situations have been improved.

  * Re-generated C files with Cython 0.28.5 - this may fix some
    compile problems under Python 3.7.

2018-07-21, S3QL 2.29

  * Removal of files that have not yet been uploaded to the backend is
    now faster, with less data being uploaded only to be removed
    shortly after.

  * Clarified NFS support in documentation.

  * contrib/clone_fs.py is now working again.

2018-06-14, S3QL 2.28

  * Fixed upgrade process for unencrypted filesystems (was broken in
    2.27 and 2.27.1).

  * mount.s3ql now checks /proc/mounts to determine if a storage url
    is already mounted rather than just relying on flags in the
    backend.

  * Fixed a busy loop, where mount.s3ql would perform normally but
    consume much more CPU than needed.

  * Temporary SQLite files are now placed in --cachedir rather
    than the system temp folder (typically /tmp).

2018-06-09, S3QL 2.27.1

  * Fixed a test failure in tests/t1_dump.py

2018-06-09, S3QL 2.27

  * The internal file system revision has changed. File systems
    created with S3QL 2.27 or newer are not compatible with prior S3QL
    versions.

    To update an existing file system to the newest revision, use the
    's3qladm upgrade' command. During the upgrade, the metadata for
    all storage objects needs to be updated (so this may take a
    while).
