@@ -9,6 +9,12 @@ UNRELEASED CHANGES
   * Fixed occasional crashes with a "dugong.StateError" exception.
     Thanks to Roger Gammans for extensive testing!
 
+  * mount.s3ql and fsck.s3ql got a new `--keep-cache` option. If this
+    is specified, locally cached data will not be removed on unmount
+    (or after fsck) so that it can be re-used if the file system is
+    mounted again on the same system without having been mounted
+    elsewhere.
+
 2018-10-08, S3QL 2.31
 
   * Object removal now makes more use of parallelism.
